# Kluge-Calculator

./: .gitignore  CMakeLists.txt  SignifigantDigits.hpp  TestFunction_Documented.hpp  Utilities.cpp  Utilities.hpp  main.cpp
Data Types/Choice Menu/: ChoiceMenu.cpp  ChoiceMenu.hpp
Data Types/Vector2/: Vector2.cpp  Vector2.hpp
EquationBase/: Equation.cpp  Equation.hpp
Functions/: SimpleMath.hpp
Functions/Physics Vectors/: PhysicsVectors.cpp  PhysicsVectors.hpp
Functions/Velocity/: Velocity.cpp  Velocity.hpp
